# metaffi-root

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  README.md  SConstruct  add-new-language-support.md  build_target.py  requirements.txt  scons_wsl.ps1
.cursor/rules/: adding_end_to_end_test.mdc  build_script_thoughts.mdc  c_cpp_formatting.mdc  cmake.mdc  containers.mdc  how_to_build_and_test.mdc  lang-support-go.mdc  lang-support-openjdk.mdc  lang-support-python311.mdc  metaffi-architecture.mdc  metaffi-core.mdc  metaffi-installer.mdc  metaffi-overview.mdc  metaffi-plugin-architecture.mdc  openjdk_compiler_thoughts.mdc  openjdk_idl_thoughts.mdc  plugin-sdk.mdc  python311_compiler_thoughts.mdc  python311_idl_thoughts.mdc  running_tools.mdc  tests.mdc
.devcontainer/ubuntu/: devcontainer.json
.devcontainer/windows/: devcontainer.json
cmake/: CPP.cmake  CopyMatchingFiles.cmake  Environment.cmake  GlobalSettings.cmake  Go.cmake  InstallUtils.cmake  JVM.cmake  Logging.cmake  MetaFFIGitRepository.cmake  PackageManagement.cmake  Python3.cmake  Utils.cmake
site_scons/: __init__.py  compiler_options.py  environment_custom_methods.py  post_actions.py  scons_utils.py
